--- a/portfolio.html
+++ b/portfolio.html
@@ -7,78 +7,80 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-portfolio fade-in">
-<header>
-  <div class="nav-container">
-    <div class="brand-area">Ohad’s WeCode</div>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-      <li><a href="progress.html" class="nav-link">Progress</a></li>
-      <li><a href="resources.html" class="nav-link">Resources</a></li>
-      <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-    </ul>
-  </div>
-</header>
+  <header>
+    <div class="nav-container">
+      <div class="brand-area">Ohad’s WeCode</div>
+      <ul class="nav-menu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
+        <!-- New IDE link added -->
+        <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
+      </ul>
+    </div>
+  </header>
 
-<main class="page-content">
-  <h1>Meet the Developer</h1>
-  <p>
-    Hello, I’m <strong>Ohad</strong>, an RT Embedded Engineer specializing in C/C++ on Linux.
-    This platform is my advanced learning and portfolio demonstration—bridging
-    real-time embedded topics with modern C++ for a professional, interview-focused skill set.
-  </p>
+  <main class="page-content">
+    <h1>Meet the Developer</h1>
+    <p>
+      Hello, I’m <strong>Ohad</strong>, an RT Embedded Engineer specializing in C/C++ on Linux.
+      This platform is my advanced learning and portfolio demonstration—bridging
+      real-time embedded topics with modern C++ for a professional, interview-focused skill set.
+    </p>
 
-  <!-- 3 highlight cards -->
-  <div class="cards-row fade-in">
-    <div class="card" style="width:280px;">
-      <h2>Background</h2>
-      <div class="ticket-text">
-        <p>B.Sc. in Computer Science / Electronics Eng.</p>
-        <p>10+ years in embedded dev</p>
-        <p>Expert in real-time systems & OS internals</p>
+    <!-- 3 highlight cards -->
+    <div class="cards-row fade-in">
+      <div class="card" style="width:280px;">
+        <h2>Background</h2>
+        <div class="ticket-text">
+          <p>B.Sc. in Computer Science / Electronics Eng.</p>
+          <p>10+ years in embedded dev</p>
+          <p>Expert in real-time systems & OS internals</p>
+        </div>
+      </div>
+      <div class="card" style="width:280px;">
+        <h2>Focus Areas</h2>
+        <div class="ticket-text">
+          <p>Low-level C/C++ programming</p>
+          <p>Multithreading & concurrency</p>
+          <p>Performance & memory optimization</p>
+        </div>
+      </div>
+      <div class="card" style="width:280px;">
+        <h2>Project Goals</h2>
+        <div class="ticket-text">
+          <p>Advanced modules for challenging C++ interviews</p>
+          <p>In-browser IDE with real-time checks</p>
+          <p>Showcase a professional portfolio & background</p>
+        </div>
       </div>
     </div>
-    <div class="card" style="width:280px;">
-      <h2>Focus Areas</h2>
-      <div class="ticket-text">
-        <p>Low-level C/C++ programming</p>
-        <p>Multithreading & concurrency</p>
-        <p>Performance & memory optimization</p>
-      </div>
+
+    <div class="resume-btn fade-in">
+      <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
+      <a href="resume.html" class="btn">View Resume</a>
     </div>
-    <div class="card" style="width:280px;">
-      <h2>Project Goals</h2>
-      <div class="ticket-text">
-        <p>Advanced modules for challenging C++ interviews</p>
-        <p>In-browser IDE with real-time checks</p>
-        <p>Showcase a professional portfolio & background</p>
-      </div>
+
+    <div style="text-align:center; margin-top:30px;">
+      <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
+      <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/github.svg" alt="GitHub">
+      </a>
+      <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn" title="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/linkedin.svg" alt="LinkedIn">
+      </a>
     </div>
-  </div>
+  </main>
 
-  <div class="resume-btn fade-in">
-    <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
-    <a href="resume.html" class="btn">View Resume</a>
-  </div>
+  <footer>
+    © 2025 Ohad’s WeCode. All rights reserved.
+  </footer>
 
-  <div style="text-align:center; margin-top:30px;">
-    <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
-    <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/github.svg" alt="GitHub">
-    </a>
-    <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn" title="LinkedIn">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/linkedin.svg" alt="LinkedIn">
-    </a>
-  </div>
-</main>
-
-<footer>
-  © 2025 Ohad’s WeCode. All rights reserved.
-</footer>
-
-<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-<script src="scripts/main.js"></script>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
