--- a/resources.html
+++ b/resources.html
@@ -7,66 +7,69 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-resources fade-in">
-<header>
-  <div class="nav-container">
-    <div class="brand-area">Ohad’s WeCode</div>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-      <li><a href="progress.html" class="nav-link">Progress</a></li>
-      <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-      <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-    </ul>
-  </div>
-</header>
+  <header>
+    <div class="nav-container">
+      <div class="brand-area">Ohad’s WeCode</div>
+      <ul class="nav-menu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
+        <!-- New IDE link -->
+        <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
+      </ul>
+    </div>
+  </header>
 
-<main class="page-content">
-  <h1>Learning Resources</h1>
-  <p class="subtitle">
-    Explore references, tutorials, external links for deeper C++ mastery.
-  </p>
+  <main class="page-content">
+    <h1>Learning Resources</h1>
+    <p class="subtitle">
+      Explore references, tutorials, external links for deeper C++ mastery.
+    </p>
 
-  <div class="resources-grid fade-in">
-    <div class="resource-card card">
-      <h2>cppreference.com</h2>
-      <p>Comprehensive documentation on C++ language features and the standard library.</p>
-      <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit</a>
+    <div class="resources-grid fade-in">
+      <!-- Resource cards unchanged -->
+      <div class="resource-card card">
+        <h2>cppreference.com</h2>
+        <p>Comprehensive documentation on C++ language features and the standard library.</p>
+        <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit</a>
+      </div>
+      <div class="resource-card card">
+        <h2>isocpp.org</h2>
+        <p>Official C++ standardization updates, guidelines, and community news.</p>
+        <a href="https://isocpp.org" target="_blank" class="btn">Visit</a>
+      </div>
+      <div class="resource-card card">
+        <h2>Learn C++</h2>
+        <p>Advanced tutorials, best practices, in-depth C++ articles.</p>
+        <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit</a>
+      </div>
+      <div class="resource-card card">
+        <h2>Boost Libraries</h2>
+        <p>Peer-reviewed portable C++ source libraries, widely used in industry.</p>
+        <a href="https://www.boost.org/" target="_blank" class="btn">Visit</a>
+      </div>
+      <div class="resource-card card">
+        <h2>Embedded Artistry</h2>
+        <p>Articles, tips, best practices for embedded C++ development.</p>
+        <a href="https://embeddedartistry.com/" target="_blank" class="btn">Visit</a>
+      </div>
+      <div class="resource-card card">
+        <h2>C++ Weekly</h2>
+        <p>Popular YouTube channel by Jason Turner for modern C++ insights.</p>
+        <a href="https://www.youtube.com/c/lefticus1" target="_blank" class="btn">Visit</a>
+      </div>
     </div>
-    <div class="resource-card card">
-      <h2>isocpp.org</h2>
-      <p>Official C++ standardization updates, guidelines, and community news.</p>
-      <a href="https://isocpp.org" target="_blank" class="btn">Visit</a>
-    </div>
-    <div class="resource-card card">
-      <h2>Learn C++</h2>
-      <p>Advanced tutorials, best practices, in-depth C++ articles.</p>
-      <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit</a>
-    </div>
-    <div class="resource-card card">
-      <h2>Boost Libraries</h2>
-      <p>Peer-reviewed portable C++ source libraries, widely used in industry.</p>
-      <a href="https://www.boost.org/" target="_blank" class="btn">Visit</a>
-    </div>
-    <div class="resource-card card">
-      <h2>Embedded Artistry</h2>
-      <p>Articles, tips, best practices for embedded C++ development.</p>
-      <a href="https://embeddedartistry.com/" target="_blank" class="btn">Visit</a>
-    </div>
-    <div class="resource-card card">
-      <h2>C++ Weekly</h2>
-      <p>Popular YouTube channel by Jason Turner for modern C++ insights.</p>
-      <a href="https://www.youtube.com/c/lefticus1" target="_blank" class="btn">Visit</a>
-    </div>
-  </div>
-</main>
+  </main>
 
-<footer>
-  © 2025 Ohad’s WeCode. All rights reserved.
-</footer>
+  <footer>
+    © 2025 Ohad’s WeCode. All rights reserved.
+  </footer>
 
-<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-<script src="scripts/main.js"></script>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
