--- a/module6.html
+++ b/module6.html
@@ -27,6 +27,8 @@
       <li><a href="quiz.html" class="nav-link">Quiz</a></li>
       <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
       <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
+      <!-- New IDE link added -->
+      <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
     </ul>
   </div>
 </header>
