--- a/progress.html
+++ b/progress.html
@@ -7,75 +7,76 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-progress fade-in">
-<header>
-  <div class="nav-container">
-    <div class="brand-area">Ohad’s WeCode</div>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-      <li><a href="resources.html" class="nav-link">Resources</a></li>
-      <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-      <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-    </ul>
-  </div>
-</header>
-
-<main class="page-content">
-  <h1>Your Learning Journey</h1>
-
-  <!-- Radial progress in a card -->
-  <section class="card fade-in" style="text-align:center; max-width:500px; margin:0 auto;">
-    <p style="margin-bottom: 20px;">
-      Track your completed lessons. The radial ring below fills up as you
-      progress through each module’s lessons.
-    </p>
-    <div class="progress-radial" id="radialProgress" style="--percent:0;">
-      <span id="progress-label">0%</span>
+  <header>
+    <div class="nav-container">
+      <div class="brand-area">Ohad’s WeCode</div>
+      <ul class="nav-menu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
+        <!-- New IDE link added -->
+        <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
+      </ul>
     </div>
-    <p id="progress-text" style="margin-top:10px;">Completed 0 / 21 Lessons</p>
-  </section>
+  </header>
 
-  <!-- Additional stats row & progress bar -->
-  <div class="progress-stats fade-in">
-    <div class="stats-card card">
-      <h3>Quizzes Completed</h3>
-      <p id="quizzes-count">0</p>
+  <main class="page-content">
+    <h1>Your Learning Journey</h1>
+
+    <!-- Radial progress in a card -->
+    <section class="card fade-in" style="text-align:center; max-width:500px; margin:0 auto;">
+      <p style="margin-bottom: 20px;">
+        Track your completed lessons. The radial ring below fills up as you
+        progress through each module’s lessons.
+      </p>
+      <div class="progress-radial" id="radialProgress" style="--percent:0;">
+        <span id="progress-label">0%</span>
+      </div>
+      <p id="progress-text" style="margin-top:10px;">Completed 0 / 21 Lessons</p>
+    </section>
+
+    <!-- Additional stats row & progress bar -->
+    <div class="progress-stats fade-in">
+      <div class="stats-card card">
+        <h3>Quizzes Completed</h3>
+        <p id="quizzes-count">0</p>
+      </div>
+      <div class="stats-card card">
+        <h3>Unlocked Modules</h3>
+        <p id="modules-unlocked">2</p>
+      </div>
+      <div class="stats-card card">
+        <h3>Achievements</h3>
+        <p id="achievements-count">Beginner</p>
+      </div>
     </div>
-    <div class="stats-card card">
-      <h3>Unlocked Modules</h3>
-      <p id="modules-unlocked">2</p>
+
+    <div class="progress-bar-container card fade-in" style="margin-top:30px;">
+      <h3 style="margin-bottom:10px;">Overall Completion</h3>
+      <div class="progress-bar-fill" id="progressBarFill"></div>
     </div>
-    <div class="stats-card card">
-      <h3>Achievements</h3>
-      <p id="achievements-count">Beginner</p>
-    </div>
-  </div>
+  </main>
 
-  <div class="progress-bar-container card fade-in" style="margin-top:30px;">
-    <h3 style="margin-bottom:10px;">Overall Completion</h3>
-    <div class="progress-bar-fill" id="progressBarFill"></div>
-  </div>
-</main>
-
-<footer>
-  © 2025 Ohad’s WeCode. All rights reserved.
-</footer>
-<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-
-<script src="scripts/main.js"></script>
-<script src="scripts/progress.js"></script>
-<script>
-  /* Example: Animate the progress bar to 40% after load */
-  document.addEventListener('DOMContentLoaded', () => {
-    const barFill = document.getElementById('progressBarFill');
-    if (barFill) {
-      setTimeout(() => {
-        barFill.style.width = '40%';
-      }, 500);
-    }
-  });
-</script>
+  <footer>
+    © 2025 Ohad’s WeCode. All rights reserved.
+  </footer>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <script src="scripts/main.js"></script>
+  <script src="scripts/progress.js"></script>
+  <script>
+    /* Example: Animate the progress bar to 40% after load */
+    document.addEventListener('DOMContentLoaded', () => {
+      const barFill = document.getElementById('progressBarFill');
+      if (barFill) {
+        setTimeout(() => {
+          barFill.style.width = '40%';
+        }, 500);
+      }
+    });
+  </script>
 </body>
 </html>
