--- a/resume.html
+++ b/resume.html
@@ -7,141 +7,143 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-resume fade-in">
-<header>
-  <div class="nav-container">
-    <div class="brand-area">Ohad’s WeCode</div>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-      <li><a href="progress.html" class="nav-link">Progress</a></li>
-      <li><a href="resources.html" class="nav-link">Resources</a></li>
-      <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
-      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-    </ul>
-  </div>
-</header>
-
-<main class="page-content">
-  <h1>Resume - Ohad Alon</h1>
-  <p class="subtitle">
-    An overview of my expertise in embedded systems, real-time programming, 
-    and modern C++ development.
-  </p>
-
-  <!-- Contact Info Card -->
-  <section class="card fade-in" style="max-width:600px; margin:20px auto;">
-    <h2>Contact Info</h2>
-    <div class="ticket-text">
-      <p><strong>Location:</strong> Herzliya, Israel</p>
-      <p><strong>Phone:</strong> +972-53-2428862</p>
-      <p><strong>Email:</strong> <a href="mailto:alonohad100@gmail.com">alonohad100@gmail.com</a></p>
-    </div>
-  </section>
-
-  <!-- Profile Card -->
-  <section class="card fade-in" style="max-width:800px; margin:20px auto;">
-    <h2>Profile</h2>
-    <div class="ticket-text">
-      <p>
-        Accomplished Senior Embedded Software Developer with extensive experience
-        designing real-time systems, optimizing embedded software architectures,
-        and delivering reliable solutions for complex projects. Expertise in
-        cybersecurity protocols, AI integration, and team mentoring.
-      </p>
-    </div>
-  </section>
-
-  <!-- Work Experience -->
-  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
-    <h2>Work Experience</h2>
-    <div class="ticket-text">
-      <article style="margin-bottom:1em;">
-        <h3>Senior Software Developer - CYMOTIVE (02/2022 – present)</h3>
-        <ul>
-          <li>Designed secure communication protocols, cryptographic solutions.</li>
-          <li>Overhauled software architecture for data flow efficiency.</li>
-          <li>Developed advanced support tools simplifying workflows.</li>
-        </ul>
-      </article>
-      <article style="margin-bottom:1em;">
-        <h3>Software Developer - Brodmann17 (01/2021 – 02/2022)</h3>
-        <ul>
-          <li>Led AI solutions for automotive object detection.</li>
-          <li>Optimized algorithms for real-time performance.</li>
-          <li>Integrated AI capabilities into client platforms.</li>
-        </ul>
-      </article>
-      <article style="margin-bottom:1em;">
-        <h3>Senior Embedded Software - Ceragon (11/2016 – 01/2021)</h3>
-        <ul>
-          <li>Architected embedded software solutions for telecom systems.</li>
-          <li>Developed scheduling for better resource utilization.</li>
-          <li>Provided mentorship to junior developers.</li>
-        </ul>
-      </article>
-      <article>
-        <h3>Software Developer - Experis Israel (04/2016 – 10/2016)</h3>
-        <ul>
-          <li>Developed embedded software under strict deadlines.</li>
-          <li>Specialized in low-level C programming, real-time debugging tools.</li>
-        </ul>
-      </article>
-    </div>
-  </section>
-
-  <!-- Education -->
-  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
-    <h2>Education</h2>
-    <div class="ticket-text">
-      <h3>B.Sc. in Electrical/Electronics Eng. - Ruppin (2010–2014)</h3>
-      <ul>
-        <li>Designed embedded system focusing on energy efficiency.</li>
-        <li>Excelled in embedded design, signal processing, low-level SW engineering.</li>
+  <header>
+    <div class="nav-container">
+      <div class="brand-area">Ohad’s WeCode</div>
+      <ul class="nav-menu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+        <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
+        <!-- New IDE link added -->
+        <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
     </div>
-  </section>
+  </header>
 
-  <!-- Key Projects & Skills -->
-  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
-    <h2>Key Projects</h2>
-    <div class="ticket-text">
-      <article style="margin-bottom:1em;">
-        <h3>Automotive Cybersecurity Framework</h3>
+  <main class="page-content">
+    <h1>Resume - Ohad Alon</h1>
+    <p class="subtitle">
+      An overview of my expertise in embedded systems, real-time programming, 
+      and modern C++ development.
+    </p>
+
+    <!-- Contact Info Card -->
+    <section class="card fade-in" style="max-width:600px; margin:20px auto;">
+      <h2>Contact Info</h2>
+      <div class="ticket-text">
+        <p><strong>Location:</strong> Herzliya, Israel</p>
+        <p><strong>Phone:</strong> +972-53-2428862</p>
+        <p><strong>Email:</strong> <a href="mailto:alonohad100@gmail.com">alonohad100@gmail.com</a></p>
+      </div>
+    </section>
+
+    <!-- Profile Card -->
+    <section class="card fade-in" style="max-width:800px; margin:20px auto;">
+      <h2>Profile</h2>
+      <div class="ticket-text">
+        <p>
+          Accomplished Senior Embedded Software Developer with extensive experience
+          designing real-time systems, optimizing embedded software architectures,
+          and delivering reliable solutions for complex projects. Expertise in
+          cybersecurity protocols, AI integration, and team mentoring.
+        </p>
+      </div>
+    </section>
+
+    <!-- Work Experience -->
+    <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+      <h2>Work Experience</h2>
+      <div class="ticket-text">
+        <article style="margin-bottom:1em;">
+          <h3>Senior Software Developer - CYMOTIVE (02/2022 – present)</h3>
+          <ul>
+            <li>Designed secure communication protocols, cryptographic solutions.</li>
+            <li>Overhauled software architecture for data flow efficiency.</li>
+            <li>Developed advanced support tools simplifying workflows.</li>
+          </ul>
+        </article>
+        <article style="margin-bottom:1em;">
+          <h3>Software Developer - Brodmann17 (01/2021 – 02/2022)</h3>
+          <ul>
+            <li>Led AI solutions for automotive object detection.</li>
+            <li>Optimized algorithms for real-time performance.</li>
+            <li>Integrated AI capabilities into client platforms.</li>
+          </ul>
+        </article>
+        <article style="margin-bottom:1em;">
+          <h3>Senior Embedded Software - Ceragon (11/2016 – 01/2021)</h3>
+          <ul>
+            <li>Architected embedded software solutions for telecom systems.</li>
+            <li>Developed scheduling for better resource utilization.</li>
+            <li>Provided mentorship to junior developers.</li>
+          </ul>
+        </article>
+        <article>
+          <h3>Software Developer - Experis Israel (04/2016 – 10/2016)</h3>
+          <ul>
+            <li>Developed embedded software under strict deadlines.</li>
+            <li>Specialized in low-level C programming, real-time debugging tools.</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <!-- Education -->
+    <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+      <h2>Education</h2>
+      <div class="ticket-text">
+        <h3>B.Sc. in Electrical/Electronics Eng. - Ruppin (2010–2014)</h3>
         <ul>
-          <li>Implemented secure communication for automotive systems.</li>
-          <li>Deployed diagnostic tools to address operational bottlenecks.</li>
+          <li>Designed embedded system focusing on energy efficiency.</li>
+          <li>Excelled in embedded design, signal processing, low-level SW engineering.</li>
         </ul>
-      </article>
-      <article>
-        <h3>AI-Based Automotive Object Detection</h3>
+      </div>
+    </section>
+
+    <!-- Key Projects & Skills -->
+    <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+      <h2>Key Projects</h2>
+      <div class="ticket-text">
+        <article style="margin-bottom:1em;">
+          <h3>Automotive Cybersecurity Framework</h3>
+          <ul>
+            <li>Implemented secure communication for automotive systems.</li>
+            <li>Deployed diagnostic tools to address operational bottlenecks.</li>
+          </ul>
+        </article>
+        <article>
+          <h3>AI-Based Automotive Object Detection</h3>
+          <ul>
+            <li>Integrated AI-driven detection solutions into client systems.</li>
+            <li>Improved detection accuracy in real-world scenarios.</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+      <h2>Skills</h2>
+      <div class="ticket-text">
         <ul>
-          <li>Integrated AI-driven detection solutions into client systems.</li>
-          <li>Improved detection accuracy in real-world scenarios.</li>
+          <li><strong>Embedded Systems:</strong> Real-Time OS, HW-SW Integration</li>
+          <li><strong>Languages:</strong> C, C++</li>
+          <li><strong>Cybersecurity:</strong> Cryptographic Protocols</li>
+          <li><strong>AI Development:</strong> TensorFlow, Object Detection</li>
+          <li><strong>Debug Tools:</strong> GDB, Real-Time Debugging</li>
+          <li><strong>Soft Skills:</strong> Problem-Solving, Collaboration</li>
         </ul>
-      </article>
-    </div>
-  </section>
+      </div>
+    </section>
+  </main>
 
-  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
-    <h2>Skills</h2>
-    <div class="ticket-text">
-      <ul>
-        <li><strong>Embedded Systems:</strong> Real-Time OS, HW-SW Integration</li>
-        <li><strong>Languages:</strong> C, C++</li>
-        <li><strong>Cybersecurity:</strong> Cryptographic Protocols</li>
-        <li><strong>AI Development:</strong> TensorFlow, Object Detection</li>
-        <li><strong>Debug Tools:</strong> GDB, Real-Time Debugging</li>
-        <li><strong>Soft Skills:</strong> Problem-Solving, Collaboration</li>
-      </ul>
-    </div>
-  </section>
-</main>
-
-<footer>
-  © 2025 Ohad’s WeCode. All rights reserved.
-</footer>
-<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-<script src="scripts/main.js"></script>
+  <footer>
+    © 2025 Ohad’s WeCode. All rights reserved.
+  </footer>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
