refactor: add IDE link to navigation in module2, module3, and module4 HTML files

--- a/module2.html
+++ b/module2.html
@@ -19,6 +19,7 @@
       <li><a href="quiz.html" class="nav-link">Quiz</a></li>
       <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
       <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
+      <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
     </ul>
   </div>
 </header>
