refactor: update IDE navigation link and enhance embedded IDE script initialization

--- a/embedded-ide.html
+++ b/embedded-ide.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.33.0/min/vs/loader.js"></script>
 </head>
 <body class="page-ide fade-in">
-  <!-- HEADER: using your original header -->
+  <!-- HEADER: using your original header with updated nav -->
   <header>
     <div class="nav-container">
       <div class="brand-area">Ohad’s WeCode</div>
@@ -22,7 +22,7 @@
         <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
         <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
-        <!-- Link to the IDE page itself -->
+        <!-- New IDE link -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
     </div>
